--- a/main.html
+++ b/main.html
@@ -12,8 +12,7 @@
 </script>
 
 	<p>Should contain the text "We can optimize a solution using both time and space optimization. To optimize a program,"</p>
-	<ol>
-	Should contain an ordered list with the following content inside li tags:
+	<ol><b>Should contain an ordered list with the following content inside li tags:</b>
 		<li>We can reduce the time taken to run the program and increase the space occupied</li>
 		<li>We can reduce the memory usage of the program and increase it's total run time</li>
 		<li>We can reduce both time and space complexity by deploying relevant algorithms</li>
